Fix Table of Contents collapsed style
See https://github.com/WordPress/wporg-mu-plugins/issues/491

--- a/mu-plugins/blocks/table-of-contents/postcss/style.pcss
+++ b/mu-plugins/blocks/table-of-contents/postcss/style.pcss
@@ -36,7 +36,7 @@
 			display: inline-block;
 			height: var(--local--icon-size);
 			width: var(--local--icon-size);
-			mask-image: url(../../../../images/chevron-small.svg);
+			mask-image: url(../images/chevron-small.svg);
 			mask-repeat: no-repeat;
 			mask-position: center;
 			transform: rotate(-90deg);
